<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.jdi</groupId>
    <artifactId>jdi-light-junit-template</artifactId>
    <version>1.0</version>
    <name>Test Automation project template</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <driver>chrome</driver>
        <domain>https://jdi-testing.github.io/jdi-light/</domain>
        <java.version>11</java.version>
<!--        <jdi.version>1.4.5</jdi.version>-->
        <allure.version>2.24.0</allure.version>
        <allure.maven.version>2.12.0</allure.maven.version>
        <surfire.version>3.0.0-M4</surfire.version>
        <jupiter.parallel>false</jupiter.parallel>
        <jupiter.parallel.threads/>
    </properties>

    <profiles>
        <profile>
            <id>ci</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <jupiter.parallel>true</jupiter.parallel>
                <jupiter.parallel.threads>5</jupiter.parallel.threads>
            </properties>
        </profile>
        <profile>
            <id>jdk16</id>
            <activation>
                <jdk>[16, 20]</jdk>
            </activation>
            <properties>
                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
            </properties>
        </profile>     
    </profiles>

    <dependencies>
        <!--JDI-->
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-html</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit5</artifactId>
            <version>${allure.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surfire.version}</version>
                <configuration>
                    <systemProperties>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemProperties>
                    <properties>
                        <configurationParameters>
                            <!--                            junit.jupiter.extensions.autodetection.enabled = true-->
                            junit.jupiter.execution.parallel.enabled = ${jupiter.parallel}
                            junit.jupiter.execution.parallel.mode.default = concurrent
                            junit.jupiter.execution.parallel.mode.classes.default = concurrent
                            junit.jupiter.execution.parallel.config.strategy = fixed
                            junit.jupiter.execution.parallel.config.fixed.parallelism = ${jupiter.parallel.threads}
                        </configurationParameters>
                    </properties>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven.version}</version>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>${project.basedir}/src/test/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>LATEST</version>
                <configuration>
                    <properties>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </properties>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
